# DMM-libsss-segment

./: configure.ac
src/: Makefile.am  libsss-segment.c
